[project]
name = "jmullan_logging"
version = "1.0.0"
description = "Easily set up logging for your python script"
authors = [
    {name = "Jesse Mullan", email="jmullan@gmail.com"},
    {name = "Hope Ranker", email="hope.ranker@gmail.com"}
]
maintainers = [
    {name = "Jesse Mullan", email="jmullan@gmail.com"}
]
classifiers = [
    "Topic :: Software Development",
    "Intended Audience :: Developers"
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["logging"]
dependencies = [
    'colorist'
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pip",
    "pre-commit",
    "pytest",
    "ruff"
]

[project.urls]
homepage = "https://github.com/jmullan/jmullan_logging"
documentation = "https://github.com/jmullan/jmullan_logging"
repository = "https://github.com/jmullan/jmullan_logging"

[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

# Linter settings
[tool.ruff]
line-length = 120
lint.select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I"   # isort
]

[tool.ruff.lint.isort]
known-local-folder = ["src"]
section-order = ["future", "standard-library", "third-party", "internal", "first-party", "local-folder"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
